tests/functional/lang/eval-fail-lessThan-3.err.exp
error:
       … while calling the 'lessThan' builtin
         at /pwd/lang/eval-fail-lessThan-3.nix:1:1:
            1| builtins.lessThan [ 1 2 ] [ "foo" ]
             | ^
            2|

       … while comparing two list elements

       error: cannot compare an integer with a string; values are 1 and "foo"
